[gd_scene load_steps=10 format=3 uid="uid://bx0v1riimiaqb"]

[ext_resource type="Script" path="res://scripts/NPC/NPC_Root_Script.gd" id="1_bjh7g"]
[ext_resource type="Texture2D" uid="uid://bqao5w1lskfqk" path="res://textures/npc/wee_lass.png" id="2_l1ik4"]
[ext_resource type="Texture2D" uid="uid://wtdrukyg88x" path="res://textures/npc/horizontal_blue_wee_lass.png" id="2_u7bgi"]
[ext_resource type="Texture2D" uid="uid://c3s7ku36aqo0u" path="res://textures/npc/wee_lass_back.png" id="3_en7qo"]
[ext_resource type="PackedScene" uid="uid://cdkol7qx01vug" path="res://scenes/entities/beehavior_scenes/search_destroy.tscn" id="4_wwdfv"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_onu4u"]
resource_local_to_scene = true

[sub_resource type="CapsuleMesh" id="CapsuleMesh_kmfoe"]

[sub_resource type="ViewportTexture" id="ViewportTexture_h5edc"]
viewport_path = NodePath("BarRoot/SubViewport")

[sub_resource type="SphereShape3D" id="SphereShape3D_is4uv"]
radius = 1.5

[node name="Enemy" type="CharacterBody3D" groups=["NPC", "NPC_friendly", "red"]]
script = ExtResource("1_bjh7g")

[node name="BHTree" parent="." node_paths=PackedStringArray("blackboard", "actor") instance=ExtResource("4_wwdfv")]
actor_node_path = NodePath("..")
blackboard = NodePath("@Node@17296")
actor = NodePath("..")

[node name="Body" type="CollisionShape3D" parent="." groups=["NPC", "NPC_friendly"]]
shape = SubResource("CapsuleShape3D_onu4u")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_kmfoe")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 20.0

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="SleepTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="AttentionTimer" type="Timer" parent="."]
wait_time = 110.0
one_shot = true

[node name="Head" type="Node3D" parent="."]

[node name="SpriteFrontSleep" type="Sprite3D" parent="Head"]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0)
visible = false
texture_filter = 2
texture = ExtResource("2_u7bgi")

[node name="SpriteFront3D" type="Sprite3D" parent="Head"]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0)
texture_filter = 2
texture = ExtResource("2_l1ik4")

[node name="SpriteBack3D" type="Sprite3D" parent="Head"]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0.001)
texture_filter = 2
texture = ExtResource("3_en7qo")

[node name="RayCast3D" type="RayCast3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -0.448)

[node name="BarRoot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05948, 0)

[node name="HealthVisual" type="Sprite3D" parent="BarRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2173, 0)
billboard = 1
texture = SubResource("ViewportTexture_h5edc")

[node name="SubViewport" type="SubViewport" parent="BarRoot"]
disable_3d = true
transparent_bg = true
size = Vector2i(150, 27)

[node name="HealthBar" type="ProgressBar" parent="BarRoot/SubViewport"]
offset_right = 150.0
offset_bottom = 27.0
value = 50.0

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(8, 0, 0, 0, 8, 0, 0, 0, 8, 0, 0, 0)
shape = SubResource("SphereShape3D_is4uv")

[connection signal="timeout" from="SleepTimer" to="." method="_on_sleep_timer_timeout"]
